--- a/pcs-cli.cabal
+++ b/pcs-cli.cabal
@@ -52,7 +52,7 @@ executable pcs-cli
 
   hs-source-dirs:      src
 
-  -- ghc-options:         -dynamic
+  -- ghc-options:         -fllvm
   
   -- Modules included in this executable, other than Main.
   -- other-modules:       
