--- a/pcs-cli.cabal
+++ b/pcs-cli.cabal
@@ -61,15 +61,17 @@ executable pcs-cli
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6
                     ,  directory >= 1.2.0.1
                     ,  filepath >= 1.3.0.1
                     ,  http-conduit >= 2.0.0.7
                     ,  http-types >= 0.8.3
+                    ,  http-client
                     ,  http-client-multipart >= 0.2.0.0
                     ,  mtl
                     ,  containers
-                    ,  conduit >= 1.0.15.1
+                    ,  conduit >= 1.1
+                    ,  conduit-extra >= 1.1
                     ,  bytestring
                     ,  network
                     ,  connection >= 0.2.0
@@ -79,6 +81,7 @@ executable pcs-cli
                     ,  text
                     ,  utf8-string >= 0.3.7
                     ,  cmdargs >= 0.10.7
+                    ,  MissingH >= 1.2
 
   
   -- Base language which the package is written in.
