--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,30 @@
-language: haskell
-ghc: '7.10'
-
 sudo: false
+language: haskell
+
+
+matrix:
+  include:
+
+    - env: BUILD=stack GHCVER=7.10.2 STACK_YAML=stack-travis.yaml
+      compiler: ": #stack 7.10.2"
+      addons: {apt: {packages: [cabal-install-head,ghc-7.10.2], sources: [hvr-ghc]}}
+
+
+
+before_install:
+  - mkdir -p ~/.local/bin
+  - export PATH=$HOME/.local/bin:$PATH
+  - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.8.0/stack-0.1.8.0-x86_64-linux.tar.gz | tar xz -C ~/.local/bin
+
+install:
+  - stack --no-terminal test --only-dependencies;
+
+
+script: stack --no-terminal test;
+
+
+cache:
+    directories:
+        - $HOME/.ghc
+        - $HOME/.cabal
+        - $HOME/.stack
