--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.8.0/stack-0.1.8.0-linux-x86_64.tar.gz | tar xz -C ~/.local/bin
 
 install:
-  - stack --no-terminal test --only-dependencies;
+  - stack --no-terminal test;
 
 
 script: stack --no-terminal test;
