--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - export PATH=~/.local/bin:$PATH
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
-install: ./travis_long stack --no-terminal --skip-ghc-check setup
+install: stack --no-terminal --skip-ghc-check setup
 
 script: stack --no-terminal --skip-ghc-check test;
 
